prometheus/prometheus-traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  ports:
  - name: promui
    port: 9090
    protocol: TCP
  selector:
    app: prometheus
