prometheus/prometheus-traefik-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
